--- a/task-list/src/app/components/tasks-item/tasks-item.component.css
+++ b/task-list/src/app/components/tasks-item/tasks-item.component.css
@@ -6,6 +6,10 @@
     }
 
     .task.reminder {
+        border-left: 5px solid green;
+    }
+
+    .task h3{
         display: flex;
         align-items: center;
         justify-content: space-between;
