--- a/task-list/src/app/components/tasks-item/tasks-item.component.html
+++ b/task-list/src/app/components/tasks-item/tasks-item.component.html
@@ -1,10 +1,15 @@
-<div class="task">
+<div 
+    class="task"
+    [ngClass]="{ reminder: task.reminder }"
+    (click)="onToggle(Task)"
+>
     <h3>{{task.text}}
         <fa-icon 
-        [icon]="faTimes"
-        [ngStyle]="{'color':'red'}"
-        ></fa-icon></h3>
-
+            [icon]="faTimes"
+            [ngStyle]="{'color':'red'}"
+            (click) = "onDelete(task)"
+        ></fa-icon>
+    </h3>
     <p>
         {{task.day}}
     </p>
